infra/frontend/istio/frontend-app-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-dr
spec:
  host: frontend-svc.default.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: frontend
        version: v1
    - name: v2
      labels:
        app: frontend
        version: v2
